--- a/Style.css
+++ b/Style.css
@@ -9,6 +9,10 @@ body{
     font-family: sans-serif;
 }
 
+html{
+    font-size: 93.75%;
+}
+
 .sr-only{
     position: absolute;
     width: 1px;
@@ -71,6 +75,18 @@ header h1{
 .card h3{
     font-weight: normal;
     font-size: 1rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.cardTotal h3{
+    font-weight: normal;
+    font-size: 1rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .card p{
@@ -85,13 +101,31 @@ header h1{
     padding: 1.5rem 2rem;
     border-radius: 0.25rem;
     margin-bottom: 2rem;
+    
+}
+
+/** TABLE =========================*/
+a {
+    text-decoration: none;
+    color:#49AA26 ;
+}
+
+a:hover{
+    color: #3dd705;
+}
+
+.button.new{
+    display: inline-block;
+    margin-bottom: .8rem;
 }
 
 /** TABLE =========================*/
 #data-table{
+    display: block;
     width: 100%;
     border-spacing: 0.5rem;
     color: #969cb3;
+    overflow-x: auto;
 }
 
 table th{
@@ -125,6 +159,11 @@ table tbody tr td:first-child{
     border-radius: 0.25rem 0 0 0.25rem;
 }
 
+table thead tr th:last-child,
+table tbody tr td:last-child{
+    border-radius: 0 0.25rem 0.25rem 0;
+}
+
 td.description{
     color:#969cb3; 
 }
@@ -143,4 +182,18 @@ footer{
     padding: 4rem 0 2rem;
     color: #969cb3;
     opacity: 0.6;
+}
+
+
+/* Responsive ====================================*/
+@media (min-width:800px){
+    html{
+        font-size: 87.5%;
+    }
+
+    #balance{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        gap: 2rem;
+    }
 }
